Fix several other bugs
